# big-data-with-pyspark

./: README.md  pyproject.toml
cleaning_data_with_pyspark/: 01.ipynb  02.ipynb  03.ipynb  04.ipynb
feature-engineering-with-pyspark/: 01.ipynb  02.ipynb  03.ipynb  04.ipynb
feature-engineering-with-pyspark/data/: 2017_StPaul_MN_Real_Estate.parquet
machine-learning-with-pyspark/: 01.ipynb  02.ipynb  03.ipynb  04.ipynb
